Setup base AR app. Configures dependencies, adds the ARview, shows a globe to verify we setup the app correctly

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    //java version
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
@@ -26,4 +31,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //Add dependencies for Runtime android sdk and android toolkit
+    implementation 'com.esri.arcgisruntime:arcgis-android:100.7.0'
+    implementation "com.esri.arcgisruntime:arcgis-android-toolkit:100.6.1"
 }
