--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
+        //Add this to download arcgis dependencies
+        maven {
+            url 'https://esri.bintray.com/arcgis'
+        }
     }
 }
 
